--- a/style.css
+++ b/style.css
@@ -62,6 +62,27 @@
     width: 500px;
 }
 
+.ex-7-img{
+    transition: 2s;
+}
+
+.ex-8-img{
+    transition: 2s;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
+
+.ex-7-img:hover{
+    filter: grayscale(0.5) sepia(0.5);
+}
+
+.ex-8-img:hover{
+    filter: grayscale(0.6) sepia(0.5);
+    border-radius: 20px;
+}
+
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
