--- a/style.css
+++ b/style.css
@@ -148,6 +148,23 @@
     width: 60px;
     height: 20px;
 }
+
+.ex-12-button:hover .ex-12-top-white{
+    animation: move-top 1.5s linear;
+}
+
+@keyframes move-top{
+    0%{
+        left: 10%;
+    }
+    50%{
+        left: 60%;
+    }
+    100%{
+        left: 10%;
+    }
+}
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
@@ -155,4 +172,88 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+.ex-12-button:hover .ex-12-top-white{
+    position: absolute;
+    top: -10px
+    left: 90%;
+}
+
+.ex-12-button:hover .ex-12-bottom-white{
+    animation: move-bottom 1.5s linear;
+}
+
+@keyframes move-bottom{
+    0%{
+        right: 10%;
+    }
+    50%{
+        right: 60%;
+    }
+    100%{
+        right: 10%;
+    }
+}
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: move-top-complete 1.5s linear;
+}
+
+@keyframes move-top-complete{
+    0%{
+        left: 10%;
+        top: -10px;
+    }
+    30%{
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45%{
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75%{
+        left: 0;
+        top: 100%;
+    }
+    90%{
+        left: -15px;
+        top: -10px;
+    }
+    100%{
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: move-bottom-complete 1.5s linear;
+}
+
+@keyframes move-bottom-complete{
+    0%{
+        right: 10%;
+        bottom: -10px;
+    }
+    30%{
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45%{
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75%{
+        right: 0;
+        bottom: 100%;
+    }
+    90%{
+        right: -15px;
+        bottom: -10px;
+    }
+    100%{
+        right: 10%;
+        bottom: -10px;
+    }
 }
